# proofora

./: .gitignore  README.md  TESTNET_DEPLOYMENT.md  package.json
aggregator/host/: Cargo.toml
aggregator/host/src/: main.rs
aggregator/methods/guest/: Cargo.toml
aggregator/methods/guest/src/: main.rs
artifacts/: benchmark.json  testnet-proofs-n2.json  testnet-public-inputs-n2.json
circuits/subproof_shape_validator/: Nargo.toml  Prover.toml
circuits/subproof_shape_validator/src/: main.nr
contracts/: Cargo.toml
contracts/aggregator_verifier/: Cargo.toml
contracts/aggregator_verifier/contracts/aggregator/: Cargo.toml
contracts/batch_verifier/: Cargo.toml
contracts/batch_verifier/src/: lib.rs  test.rs
contracts/batch_verifier/test_snapshots/test/: rejects_mutated_batch_root.1.json  rejects_unregistered_app_id.1.json  verifies_batch_and_returns_receipt.1.json
contracts/stellar-risc0-verifier/: deployment.toml
docs/: demo-script.md
evidence/: README.md  auditor-receipt.json  local-latest.json  mutation-results.json  public-input-manifest.json  testnet-latest.json  testnet-links.md  tool-versions.txt  verifier-artifacts.json
frontend/: download_png.html  index.html  package-lock.json  package.json  render.html
scripts/: aggregator.mjs  aggregator.test.mjs  bench-risc0.js  bench.mjs  build-witness.ts  testnet-e2e.ts
sub_circuit/host/: Cargo.toml
sub_circuit/host/src/: lib.rs
sub_circuit/methods/: Cargo.toml
sub_circuit/methods/guest/src/: main.rs
tests/mutation/: public-inputs.test.ts  replay-stale.test.ts
web/: build.mjs
(+2 files in other folders)
